tests/expectations/parser/statement/return_fail.out
namespace = "ParseStatement"
expectation = "Fail"
outputs = [
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '<eof>'
    --> test:1:1
     |
   1 | return
     | ^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 5.
    --> test:1:8
     |
   1 | return 5
     |        ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test:2:1
     |
   2 | if x {}
     | ^^""",
]
